--- a/monoblock/mono22mmoptions3.html
+++ b/monoblock/mono22mmoptions3.html
@@ -73,7 +73,7 @@
                         
 
                     <div class="option-group">
-                        <button class="option-btn btn-common whitebtn fourththoptionereder"><div class="red-btn"></div>3PSML4</button>
+                        <button class="option-btn btn-common whitebtn fourththoptionereder"><div class="red-btn"></div>3AML4</button>
                       
 
                         <div class="nested-options">
