--- a/push/momenmetalpushscrow.html
+++ b/push/momenmetalpushscrow.html
@@ -11836,27 +11836,27 @@ document.getElementById('recsssmetalsixsinputno').addEventListener('input', recs
 <div class="boot">
     <div class="image-container hidden" id="bootmetalwhiteimageContainer">
         <img src="push/metalscrew/boot/white.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF1</div>
+        <div class="image-name">2AF1</div>
     </div>
     <div class="image-container hidden" id="bootmetalblackimageContainer">
         <img src="push/metalscrew/boot/black.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF2</div>
+        <div class="image-name">2AF2</div>
     </div>
     <div class="image-container hidden" id="bootmetalgreenimageContainer">
         <img src="push/metalscrew/boot/green.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF3</div>
+        <div class="image-name">2AF3</div>
     </div>
     <div class="image-container hidden" id="bootmetalredimageContainer">
         <img src="push/metalscrew/boot/red.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF4</div>
+        <div class="image-name">2AF4</div>
     </div>
     <div class="image-container hidden" id="bootmetalblueimageContainer">
         <img src="push/metalscrew/boot/blue.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF6</div>
+        <div class="image-name">2AF6</div>
     </div>
     <div class="image-container hidden" id="bootmetalyellowimageContainer">
         <img src="push/metalscrew/boot/yellow.png" alt="Product Image" class="product-image">
-        <div class="image-name">2PSF8</div>
+        <div class="image-name">2AF8</div>
     </div>
     
     <div id="bootmetalplus1" class="plus-symbol" style="display: none;">+</div>
