--- a/pushmashroom/mashroomplastichclip/momentary40mmclip.html
+++ b/pushmashroom/mashroomplastichclip/momentary40mmclip.html
@@ -1683,23 +1683,23 @@
     <!-- Image Section -->
    
     <div class="image-container hidden" id="momentory40mmclipblackimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm Black.png" alt="Product Image" class="product-image">
+        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm black.png" alt="Product Image" class="product-image">
         <div class="image-name">P4AM2</div>
     </div>
     <div class="image-container hidden" id="momentory40mmclipgreenimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm Green.png" alt="Product Image" class="product-image">
+        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm green.png" alt="Product Image" class="product-image">
         <div class="image-name">P4AM3</div>
     </div>
     <div class="image-container hidden" id="momentory40mmclipredimageContainer">
-        <img src="push/metalscrew/flush/Momentary 40mm Black,Green,Blue,Yellow.png" alt="Product Image" class="product-image">
+        <img src="pushmashroom/Mushroom Clip On Plastic/Momentary 40mm Black,Green,Blue,Yellow.png" alt="Product Image" class="product-image">
         <div class="image-name">P4AM4</div>
     </div>
     <div class="image-container hidden" id="momentory40mmclipblueimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm Blue.png" alt="Product Image" class="product-image">
+        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm blue.png" alt="Product Image" class="product-image">
         <div class="image-name">P4AM6</div>
     </div>
     <div class="image-container hidden" id="momentory40mmclipyellowimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm Yellow.png" alt="Product Image" class="product-image">
+        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Momentary 40mm yellow.png" alt="Product Image" class="product-image">
         <div class="image-name">P4AM8</div>
     </div>
     
