--- a/pushmashroom/mashroomplastichclip/pushpull60mmclip.html
+++ b/pushmashroom/mashroomplastichclip/pushpull60mmclip.html
@@ -718,12 +718,12 @@
  <div class="flushimg">
    
     <div class="image-container hidden" id="pushpull60mmclipblackimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Push pull 60mm Black.png" alt="Product Image" class="product-image">
-        <div class="image-name">P4PSMPPJ2</div>
+        <img src="pushmashroom/Mushroom Clip On Plastic/Mushroom Clip On Plastic/Push pull 60 Black.png" alt="Product Image" class="product-image">
+        <div class="image-name">P4AMPPJ2</div>
     </div>
     <div class="image-container hidden" id="pushpull60mmclipredimageContainer">
-        <img src="pushmashroom/Mushroom Clip On Plastic/Push pull 60mm Black.png" alt="Product Image" class="product-image">
-        <div class="image-name">P4PSMPPJ4</div>
+        <img src="pushmashroom/Mushroom Clip On Plastic/Push pull 60 Black.png" alt="Product Image" class="product-image">
+        <div class="image-name">P4AMPPJ4</div>
     </div>
     <div id="pushpull60mmclipplus1" class="plus-symbol" style="display: none;">+</div>
 
